# easy_pid_motor_ctrl

./: README.md
arduino/main/motor_with_enc_pid_ctrl/: encoder_setup.h  motor_bridge_control.h  motor_with_enc_pid_ctrl.ino  simple_pid_control.h
main/motor_control_i2c_client_api/: i2c_client_api.h  i2c_client_api.ino  motor_control_i2c_client.h  motor_control_i2c_client_api.ino
main/motor_control_i2c_client_api_cpp/: motor_control_i2c_client.h  motor_control_i2c_client_api_cpp.ino
main/motor_control_libserial_client_api_cpp/: CMakeLists.txt  README.md
main/motor_control_myserial_client_api_cpp/: CMakeLists.txt  README.md
main/motor_control_pyserial_client_api_py/: serial_client_api.py  serial_test.py
main/motor_control_serial_client_api/: serial_client_api.py
main/motor_ctrl_with_serial_i2c_server_api/: eeprom_setup.h  encoder_setup.h  global_params_eeprom.h  motor_ctrl_with_serial_i2c_server_api.ino  serialComAPI.h  serial_i2c_comm_api.h  simple_pid_control.h
main/motor_with_enc_pid_ctrl/: motor_with_enc_pid_ctrl.ino
main/py_gui_tk/: appGlobals.py  encoderA_setup_frame.py  encoderB_setup_frame copy.py  encoderB_setup_frame.py  mainApp.py  mainApp_test.py  other_params_setup_frame.py
python/test/: motor_pos_with_serial_tk.py  plot_motor_data.py  plot_motor_data_scroll.py
test/cpp/matplotlib_cpp_test/: CMakeLists.txt
test/cpp/matplotlib_cpp_test/src/: animation.cpp  draw_circle_animation.cpp  testplot.cpp
test/python/: motor_pos_with_serial.py  motor_pos_with_serial2.py  plot_motor_data_tk.py  plot_tk_test.py  scrolling_plot.py
(+43 files in other folders)
